# super-tools

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  svelte.config.js  workflow.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
docs/: index.html  style.css
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 19_canvas_tables.sql  20_canvas_explorer_kind.sql  21_canvas_regions.sql
src-tauri/src/: contexts.rs  git.rs  lib.rs  models.rs  plugins.rs  profiles.rs  sessions.rs  storage.rs  system.rs  terminal.rs  usage.rs  worktree.rs
src-tauri/src/appearance/: vibrancy.rs
src-tauri/src/cloud/: client.rs  commands.rs  mod.rs  models.rs  scheduler.rs  snapshots.rs  sync.rs
src-tauri/src/cloud/domains/: agent.rs  coworkers.rs  explorer.rs  mod.rs  nosql.rs  rest.rs  sql.rs  ssh.rs  util.rs  workspace_boards.rs  workspace_notes.rs
src-tauri/src/commands/: agent_git.rs  agent_plugins.rs  agent_usage.rs  collections.rs  environments.rs  history.rs  http_executor.rs  import_export.rs  mod.rs  nosql_client.rs  requests.rs  settings.rs  sql_client.rs
src-tauri/src/commands/ai/: anthropic.rs  context.rs  mod.rs  openai.rs  tools.rs  tools_nosql.rs  tools_sql.rs  types.rs  usage.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/github/: gist.rs  mod.rs  oauth.rs
src-tauri/src/modes/: mod.rs
src-tauri/src/modes/agent/: commands.rs  git.rs  mod.rs  models.rs  plugins.rs  terminal.rs  usage.rs  worktree.rs
src-tauri/src/modes/canvas/: commands.rs  db.rs  mod.rs  models.rs
src-tauri/src/modes/explorer/backends/: azure_blob.rs  s3.rs
src-tauri/src/modes/nosql/: ai_tools.rs  client.rs
src-tauri/src/modes/rest/: http_executor.rs
src-tauri/src/modes/sql/: ai_tools.rs  clickhouse_client.rs  client.rs  d1_client.rs
src-tauri/src/modes/ssh/: terminal.rs  tunnel.rs
src-tauri/src/modes/workspace/: agent_spawn.rs  commands.rs  mcp.rs  pr.rs
src-tauri/src/modes/workspace/mcp/: dispatch.rs  server.rs
src-tauri/src/shared/ai/: providers.rs
src-tauri/src/shared/ai/clients/: openai.rs
src-tauri/src/shared/cli/: claude.rs  gemini.rs
src-tauri/src/shared/http/: mod.rs
src-tauri/src/shared/platform/: path.rs  shell.rs
src-tauri/src/shared/repos/: ai_configurations.rs  mod.rs  sessions.rs  workspaces.rs
src-tauri/src/telemetry/: mod.rs  scheduler.rs
src/lib/: prompts.ts
src/lib/commands/: ai.ts  cloud.ts  collections.ts  environments.ts  github.ts  history.ts  http.ts  import_export.ts  index.ts  nosql_client.ts  requests.ts  settings.ts  sql_client.ts  syncReload.ts
src/lib/components/: BottomBar.svelte  DeleteConfirmModal.svelte  EditSessionModal.svelte  NewSessionModal.svelte  SettingsModal.svelte  Sidebar.svelte  UpdateToast.svelte  UsageDashboard.svelte
src/lib/components/agent/: AgentNav.svelte  AgentPanel.svelte  NewSessionModal.svelte  UsageDashboard.svelte
src/lib/components/ai/: AIPanel.svelte  AIPanel.svelte.css
src/lib/components/cloud/: ConflictResolverModal.svelte  DeviceSetupModal.svelte
src/lib/components/env/: EnvManagerModal.svelte  EnvSidebar.svelte  EnvVarTable.svelte
src/lib/components/github/: GitHubConnect.svelte
src/lib/components/nav/: CollectionItem.svelte  HistoryPanel.svelte  InlineInput.svelte  NavPanel.svelte  NoSqlNav.svelte  RequestItem.svelte  RestNav.svelte  SqlNav.svelte
src/lib/components/nosql/: ConnectionDialog.svelte  DocumentViewer.svelte  DocumentViewer.svelte.css  NoSqlPanel.svelte  QueryEditor.svelte  RedisViewer.svelte
src/lib/components/onboarding/: Onboarding.svelte
src/lib/components/rest/: AuthEditor.svelte  BinaryPicker.svelte  BodyEditor.svelte  FormKVEditor.svelte  HistoryViewer.svelte  KVTable.svelte  MultipartEditor.svelte  ReqEnvPill.svelte  RequestBar.svelte  RequestEditor.svelte  ResponseHeaders.svelte  ResponseViewer.svelte  RestPanel.svelte
src/lib/components/settings/: AccountTabContent.svelte  SettingsModal.svelte  SettingsModal.svelte.css
src/lib/components/shared/: ConfirmDialog.svelte  ContextMenu.svelte  Dropdown.svelte  EnvInput.svelte  ImportExportModal.svelte  Modal.svelte  SaveRequestDialog.svelte  ShortcutsOverlay.svelte  Toast.svelte  UpdateNotification.svelte  WhatsNewModal.svelte  WindowControls.svelte  contextmenu.ts  toast.ts
src/lib/components/sidebar/: Avatar.svelte  Sidebar.svelte  SidebarButton.svelte
src/lib/components/sql/: ConnectionDialog.svelte  QueryEditor.svelte  ResultsTable.svelte  SqlPanel.svelte  TableExplorer.svelte
src/lib/components/statusbar/: StatusBar.svelte
src/lib/components/topbar/: EnvPill.svelte  Topbar.svelte
src/lib/modes/agent/: canvas-adapter.ts  commands.ts  index.ts  stores.ts  types.ts
src/lib/modes/canvas/: adapter-registry.ts  adapter.ts  commands.ts  layout-engine.ts
src/lib/modes/explorer/: canvas-adapter.ts
src/lib/modes/nosql/: canvas-adapter.ts
src/lib/modes/rest/: canvas-adapter.ts
src/lib/modes/sql/: canvas-adapter.ts  commands.ts  stores.ts  types.ts
src/lib/modes/ssh/: canvas-adapter.ts  stores.ts
src/lib/prompts/: nosql.ts  rest.ts  sql.ts
src/lib/services/: ai-chat.ts  ai-context-nosql.ts  ai-context-rest.ts  ai-context-sql.ts  firstSync.ts
src/lib/stores/: agent.ts  app.ts  cloud.ts  collections.ts  contexts.svelte.ts  drag.ts  environments.ts  git.svelte.ts  github.ts  history.ts  index.ts  nosql.ts  notifications.svelte.ts  plugins.svelte.ts  settings.ts  shell.svelte.ts  sql.ts  tabs.ts  terminal.svelte.ts  theme.svelte.ts  updater.svelte.ts  usage.svelte.ts
src/lib/styles/: app.css
src/lib/types/: ai.ts  collection.ts  environment.ts  http.ts  index.ts  nosql.ts  settings.ts  sql.ts
src/lib/utils/: curl-generator.ts  curl-parser.ts  errors.ts  import-parser.ts  json-highlight.ts  shortcuts.ts  sql-splitter.ts  tabActivation.ts  theme.ts  updater.ts  url-highlight.ts  variable-resolver.ts
src/routes/: +layout.svelte  +page.svelte
(+80 files in other folders)
