[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
portable-pty = "0.9.0"
uuid = { version = "1.22.0", features = ["v4"] }
dirs = "5"
base64 = "0.22"
chrono = "0.4"
window-vibrancy = "0.6"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
url = "2.5.8"
tokio = { version = "1.50.0", features = ["time"] }
image = "0.25.10"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

